<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item 
        android:id="@+id/menu_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/history"
        />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_menu_preferences"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/settings"/>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="998"
        android:showAsAction="never"
        android:title="@string/about"/>
    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="999"
        android:showAsAction="never"
        android:title="@string/exit"/>
    <item
        android:id="@+id/menu_help"
        android:orderInCategory="997"
        android:showAsAction="never"
        android:title="@string/help"/>

</menu>